--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
   "style": "dist/raivue.css",
   "files": [
     "dist",
-    "src"
+    "src",
+    "lib"
   ],
   "scripts": {
     "clean": "rimraf dist",
-    "build": "node build/build.js",
+    "build": "yon run build:common && yon run build:browser && yon run build:browser:min",
+    "build:common": "cross-env NODE_ENV=common webpack --config build/webpack.config.common.js --progress --hide-modules",
+    "build:browser:base": "webpack --config build/webpack.config.browser.js --progress --hide-modules",
+    "build:browser": "cross-env NODE_ENV=browser yon run build:browser:base",
+    "build:browser:min": "cross-env NODE_ENV=production yon run build:browser:base -- -p",
     "build:dll": "webpack --progress --config build/webpack.config.dll.js",
     "lint": "yon run lint:js && yon run lint:css",
     "lint:js": "eslint --ext js --ext jsx --ext vue src test/**/*.spec.js test/*.js build",
@@ -38,18 +43,7 @@
   },
   "pre-commit": "lint:staged",
   "devDependencies": {
-    "buble": "^0.15.2",
-    "clean-css": "^4.0.0",
-    "mkdirp": "^0.5.1",
-    "rollup": "^0.41.6",
-    "rollup-plugin-buble": "^0.15.0",
-    "rollup-plugin-commonjs": "^8.0.0",
-    "rollup-plugin-jsx": "^1.0.0",
-    "rollup-plugin-node-resolve": "^3.0.0",
-    "rollup-plugin-postcss": "^0.4.1",
-    "rollup-plugin-replace": "^1.1.0",
-    "rollup-plugin-vue": "^2.3.0",
-    "uglify-js": "^3.0.0",
+    "null-loader": "^0.1.1",
     "add-asset-html-webpack-plugin": "^2.0.0",
     "babel-core": "^6.24.0",
     "babel-eslint": "^7.2.0",
@@ -132,5 +126,6 @@
     "url": "https://github.com/joshporter1/raivue/issues"
   },
   "homepage": "https://github.com/joshporter1/raivue#readme",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {}
 }
