--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "raivue",
-  "version": "0.1.5",
-  "description": "A Vue.js plugin for accepting RaiBlocks payments using Brainblocks",
+  "version": "0.1.6",
+  "description": "A Vue.js plugin for accepting Nano payments using Brainblocks",
   "author": "Josh Porter <joshporter1@gmail.com>",
   "keywords": ["raiblocks", "brainblocks", "vuejs", "vue", "vue-plugin"],
   "main": "dist/raivue.common.js",
