--- a/package.json
+++ b/package.json
@@ -3,7 +3,13 @@
   "version": "0.1.8",
   "description": "A Vue.js plugin for accepting Nano payments using Brainblocks",
   "author": "Josh Porter <joshporter1@gmail.com>",
-  "keywords": ["raiblocks", "brainblocks", "vuejs", "vue", "vue-plugin"],
+  "keywords": [
+    "raiblocks",
+    "brainblocks",
+    "vuejs",
+    "vue",
+    "vue-plugin"
+  ],
   "main": "dist/raivue.common.js",
   "module": "dist/raivue.esm.js",
   "browser": "dist/raivue.js",
@@ -44,18 +50,17 @@
   },
   "pre-commit": "lint:staged",
   "devDependencies": {
-    "null-loader": "^0.1.1",
     "add-asset-html-webpack-plugin": "^2.0.0",
-    "babel-core": "^6.24.0",
+    "babel-core": "^6.26.3",
     "babel-eslint": "^7.2.0",
     "babel-helper-vue-jsx-merge-props": "^2.0.0",
     "babel-loader": "^7.0.0",
-    "babel-plugin-istanbul": "^4.1.0",
+    "babel-plugin-istanbul": "^4.1.6",
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-plugin-transform-vue-jsx": "^3.4.0",
-    "babel-preset-env": "^1.4.0",
+    "babel-preset-env": "^1.7.0",
     "chai": "^3.5.0",
     "chai-dom": "^1.4.0",
     "cross-env": "^4.0.0",
@@ -68,7 +73,7 @@
     "karma": "^1.7.0",
     "karma-chai-dom": "^1.1.0",
     "karma-chrome-launcher": "^2.1.0",
-    "karma-coverage": "^1.1.0",
+    "karma-coverage": "^1.1.2",
     "karma-mocha": "^1.3.0",
     "karma-sinon-chai": "^1.3.0",
     "karma-sourcemap-loader": "^0.3.7",
@@ -77,6 +82,7 @@
     "lint-staged": "^3.4.0",
     "mocha": "^3.3.0",
     "mocha-css": "^1.0.1",
+    "null-loader": "^0.1.1",
     "postcss": "^6.0.0",
     "postcss-cssnext": "^2.10.0",
     "pre-commit": "^1.2.0",
